--- a/index.html
+++ b/index.html
@@ -95,18 +95,20 @@
                 <div class="col-sm-9">
                 <div class="row">
                     <div class="col-sm-6">
-                    <button type="button" class="btn btn-primary btn-lg" style="height: 150px; width: 460px">Large</button>           
+                    <button type="button" class="btn btn-primary btn-lg" style="height: 150px; width: 460px">Resume</button>           
                     </div>
                     <div class="col-sm-6">
-                        <button type="button" class="btn btn-primary btn-lg" style="height: 150px; width: 460px">Large</button>
+                        <button type="button" class="btn btn-primary btn-lg" style="height: 150px; width: 460px">Skills</button>
                     </div>
                 </div>
+                
                 <div class="row">
+                    <br>
                     <div class="col-sm-6">
-                        <button type="button" class="btn btn-primary btn-lg" style="height: 150px; width: 460px">Large</button>
+                        <button type="button" class="btn btn-primary btn-lg" style="height: 150px; width: 460px">Projects</button>
                     </div>
                     <div class="col-sm-6">
-                        <button type="button" class="btn btn-primary btn-lg" style="height: 150px; width: 460px">Large</button>
+                        <button type="button" class="btn btn-primary btn-lg" style="height: 150px; width: 460px">MISC</button>
                     </div>
                     </div>
                 </div>
