--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         </script>
 
     <title>Lakshya Srivastava</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
