--- a/index.html
+++ b/index.html
@@ -1,29 +1,30 @@
 <html>
     <head>
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-129283234-1"></script>
-        <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'UA-129283234-1');
-        </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-129283234-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-129283234-1');
+    </script>
 
     <title>Lakshya Srivastava</title>
+    <meta charset="utf-8">    
+    <meta name="viewport" content="width=device-width, initial-scale=1">    
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="css/hover-min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">    
+    <link rel=stylesheet href="https://s3-us-west-2.amazonaws.com/colors-css/2.2.0/colors.min.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-metro.css">        
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-    <link rel=stylesheet href="https://s3-us-west-2.amazonaws.com/colors-css/2.2.0/colors.min.css">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-metro.css">    
     <script defer src="https://use.fontawesome.com/releases/v5.5.0/js/all.js" integrity="sha384-GqVMZRt5Gn7tB9D9q7ONtcp4gtHIUEW/yG7h98J7IpE3kpi+srfFyyB/04OV6pG0" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <style>
         
         .jumbotron{
@@ -84,7 +85,7 @@
         
         body  {
         background-image: url("nb.png");
-        background-repeat: no-repeat;
+        background-repeat: repeat;
         background-attachment: fixed;
         }
 
@@ -111,19 +112,19 @@
                 <div class="col-sm-9">
                 <div class="row">
                     <div class="col-sm-6">
-                    <button type="button" class="btn btn-primary btn-lg" style="height: 140px; width: 460px">Resume</button>           
+                        <a href ="#" class="btn btn-danger btn-lg; button hvr-grow; hvr-bounce-out " style="height: 140px; width: 460px"><center><i><h3>Resume</h3></i></center></a>           
                     </div>
                     <div class="col-sm-6">
-                        <button type="button" class="btn btn-primary btn-lg" style="height: 140px; width: 460px">Skills</button>
+                        <a href ="#"  class="btn btn-danger btn-lg; button hvr-grow; hvr-bounce-out " style="height: 140px; width: 460px"><center><i><h3>Resume</h3></i></center></a>
                     </div>
                 </div>    
                 <div class="row">
                     <br>
                     <div class="col-sm-6">
-                        <button type="button" class="btn btn-primary btn-lg" style="height: 140px; width: 460px">Projects</button>
+                        <a href ="#"  class="btn btn-danger btn-lg; button hvr-grow; hvr-bounce-out " style="height: 140px; width: 460px"><center><i><h3>Resume</h3></i></center></a>
                     </div>
                     <div class="col-sm-6">
-                        <button type="button" class="btn btn-primary btn-lg" style="height: 140px; width: 460px">MISC</button>
+                        <a href ="#"  class="btn btn-danger btn-lg; button hvr-grow; hvr-bounce-out " style="height: 140px; width: 460px"><center><i><h3>Resume</h3></i></center></a>
                     </div>
                     </div>
                 </div>
