--- a/resume.html
+++ b/resume.html
@@ -55,8 +55,8 @@
         overflow: hidden;
         background-color: #333;
         position: fixed;
-        bottom: auto;
-        width: auto;
+        bottom: 0;
+        width: 100%;
         }
 
         .navbar a {
@@ -93,15 +93,9 @@
     </style>            
     </head>
     <body>
+        
         <br>
         <div class="container-fluid">
-        <div class="navbar">
-        <a href="#home"><i class="fab fa-twitter"></i></a>
-        <a href="https://www.facebook.com/lakshya.srivastava.9"><i class="fab fa-facebook-square"></i></a>
-        <a href="https://github.com/lakshyasri"><i class="fab fa-github"></i></a>
-        <a href="https://www.instagram.com/erlakshyasrivastava/"><i class="fab fa-instagram"></i></a>
-        <a href="https://stackoverflow.com/users/9393525/lakshya-srivastava"><i class="fab fa-stack-overflow"></i></a>
-        </div>
             <br>
             <br>
             <div class="transbox" style="padding-left: 10px">
@@ -297,6 +291,15 @@
             </div>
         </div>
         </div>
+        </div>
+        <br>
+        <br>
+        <br>
+        <div class="navbar fixed-bottom navbar-light bg-dark">
+        <a href="#home"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.facebook.com/lakshya.srivastava.9"><i class="fab fa-facebook-square"></i></a>
+        <a href="https://github.com/lakshyasri"><i class="fab fa-github"></i></a>
+        <a href="https://www.instagram.com/erlakshyasrivastava/"><i class="fab fa-instagram"></i></a>
         </div>
      
     </body>
