--- a/index.html
+++ b/index.html
@@ -50,33 +50,38 @@
         color: #000000;
         }
         
-        .navbar {
-        overflow: hidden;
-        background-color: #333;
-        position: fixed;
-        bottom: 0;
-        width: 100%;
-        }
+        
+.navbar {
+  overflow: hidden;
+  background-color: #333;  
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
 
-        .navbar a {
-        float: left;
-        display: block;
-        color: #f2f2f2;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-        font-size: 17px;
-        }
+.navbar a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
 
-        .navbar a:hover {
-        background: #f1f1f1;
-        color: black;
-        }
+.navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
 
-        .navbar a.active {
-        background-color: #4CAF50;
-        color: white;
-        }
+.navbar a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.navbar .icon {
+  display: none;
+}
 
         .main {
         padding: 16px;
