--- a/index.html
+++ b/index.html
@@ -130,6 +130,9 @@
         <br>
         <br>
         <br>
+        <div class="col-sm-3">
+            <div class="contaner"><img class="img-fluid" src="chart.png" alt="Chania" width="310" height="225"></div> 
+            </div>
         <div class="navbar">
         <a href="#home"><i class="fab fa-twitter"></i></a>
         <a href="https://www.facebook.com/lakshya.srivastava.9"><i class="fab fa-facebook-square"></i></a>
