--- a/index.html
+++ b/index.html
@@ -116,11 +116,13 @@
         <br>
         <br>
         <center>
-        <div class="contaner"><img class="img-fluid" src="chart.png" alt="Chania" width="610" height="525"></div> 
+        <div class="contaner"><img class="img-fluid" src="chart.png" alt="Chania" width="610" height="525"></div>
+        <div class="contaner"><img class="img-fluid" src="bday.jpeg" alt="Chania" width="610" height="525"></div>     
         </center>
         <h1>Some projects at glance</h1>
         <div class="contaner"><img class="img-fluid" src="pro1.png" alt="Chania" width="810" height="725"></div> 
         <br>
+        
         <div class="navbar" style="text-align: left">    
         <div style=" color: silver;"><p>Lakshya Srivastava<br>+1 646 983 8877<br>lakshyasri@outlookcom<br>lsrivastava@albany.edu</p></div>
         <a href="https://www.facebook.com/lakshya.srivastava.9"><i class="fab fa-facebook-square"></i></a>
