--- a/index.html
+++ b/index.html
@@ -271,8 +271,33 @@
         <br>
         <br>
         <h1>Some projects at glance</h1>
-        <div class="contaner"><img class="img-fluid" src="pro1.png" alt="Chania" width="810" height="725"></div> 
-        <br>
+        <div class="row">
+                    <div class="col-sm">
+                    <div class="contaner"><img class="img-fluid" src="pro1.png" alt="Chania" width="810" height="725"></div> 
+                    <br>
+                    </div>
+                    
+                    <div class="col-sm">
+                        <br>
+                        <br>
+                    <p style="font-size: 15px">
+                        <b>
+                    Replica of University of California, Berkely's SETI@home, developed on completely different distributed platform to perform high computions python tasks (any,that could be parallelized)    &nbsp;
+                    like high vol. Monte Carlo Pi estimation or Stock value prediction.
+                        </b>
+                    </p>
+                    <p style="font-size: 15px">
+                    <b>
+                     Running a master on AWS EC2, waiting for jobs and ditributing to all connected nodes (slaves, who downloaded my slave file), while keepig track of their CPU resources and queue.
+                    </b>
+                    </p>
+                    <p style="font-size: 15px"> 
+                    <b>    
+                    Ease of running any python program and easy to maintain and configure. Developed under the able guidance of Prof. Umang Brahmakshatriya.
+                    </b>
+                    </p>    
+                    </div>
+        </div>
         
             <div class="row">
                     <div class="col-sm">
