--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             background: none;
         }
         body{ 
-  background: url(spi.png) no-repeat center fixed; 
+  background: url(foo.png) no-repeat center fixed; 
   background-size: cover;
      }
     </style>            
@@ -198,7 +198,7 @@
                             <div class="contaner"><img class="img-fluid" src="c.png" alt="Chania" width="80" height="25"></div>
                     </div>
                     <div class="col-sm">
-                            <div class="contaner"><img class="img-fluid" src="node.png" alt="Chania" width="150" height="145"></div>
+                            <div class="contaner"><img class="img-fluid" src="node.png" alt="Chania" width="500" height="445"></div>
                     </div>
                     <div class="col-sm">
                             
